[gd_scene load_steps=6 format=3 uid="uid://yus1loxriev2"]

[ext_resource type="Script" path="res://examples/portraits_balloon/balloon.gd" id="1_bf5nr"]
[ext_resource type="AudioStream" uid="uid://cng7ex3hvatxl" path="res://examples/portraits_balloon/talk.wav" id="2_b2tey"]
[ext_resource type="PackedScene" uid="uid://ckvgyvclnwggo" path="res://addons/dialogue_manager/dialogue_label.tscn" id="4_m3ccg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5d24i"]
content_margin_left = 40.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(1, 1, 1, 0.25098)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oj3c8"]
content_margin_left = 40.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
draw_center = false

[node name="Balloon" type="CanvasLayer" node_paths=PackedStringArray("response_template")]
layer = 100
script = ExtResource("1_bf5nr")
response_template = NodePath("Balloon/Margin/HBox/VBox/ResponseTemplate")

[node name="TalkSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_b2tey")

[node name="Balloon" type="ColorRect" parent="."]
texture_filter = 2
offset_right = 1152.0
size_flags_horizontal = 3
color = Color(0, 0, 0, 1)

[node name="Margin" type="MarginContainer" parent="Balloon"]
custom_minimum_size = Vector2(0, 190)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 190.0
grow_horizontal = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
metadata/_edit_layout_mode = 1

[node name="HBox" type="HBoxContainer" parent="Balloon/Margin"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Portrait" type="Control" parent="Balloon/Margin/HBox"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="Balloon/Margin/HBox/Portrait"]
centered = false

[node name="VBox" type="VBoxContainer" parent="Balloon/Margin/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="CharacterLabel" type="RichTextLabel" parent="Balloon/Margin/HBox/VBox"]
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
mouse_filter = 1
bbcode_enabled = true
text = "Character"
fit_content = true
scroll_active = false

[node name="DialogueLabel" parent="Balloon/Margin/HBox/VBox" instance=ExtResource("4_m3ccg")]
layout_mode = 2
text = "Dialogue"

[node name="Responses" type="VBoxContainer" parent="Balloon/Margin/HBox/VBox"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="ResponseTemplate" type="RichTextLabel" parent="Balloon/Margin/HBox/VBox"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_5d24i")
theme_override_styles/normal = SubResource("StyleBoxFlat_oj3c8")
bbcode_enabled = true
text = "Response"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
meta_underlined = false
hint_underlined = false

[connection signal="gui_input" from="Balloon" to="." method="_on_balloon_gui_input"]
[connection signal="resized" from="Balloon/Margin" to="." method="_on_margin_resized"]
[connection signal="spoke" from="Balloon/Margin/HBox/VBox/DialogueLabel" to="." method="_on_dialogue_label_spoke"]
